--- a/blocks/support/support.css
+++ b/blocks/support/support.css
@@ -3,3 +3,17 @@
   padding-top: 100px;
   padding-bottom: 100px;
 }
+
+@media screen and (max-width: 1439px) {
+  .support {
+    padding-top: 45px;
+    padding-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .support {
+    padding-top: 31px;
+    padding-bottom: 32px;
+  }
+}
